@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkCanvas.c,v 1.21.2.2 2005/06/21 17:29:16 dgp Exp $
+ * RCS: @(#) $Id: tkCanvas.c,v 1.21.2.3 2005/08/11 12:17:09 dkf Exp $
  */
 
 /* #define USE_OLD_TAG_SEARCH 1 */
@@ -521,8 +521,7 @@ CanvasWidgetCmd(clientData, interp, objc, objv)
     Tcl_Obj *CONST objv[];		/* Argument objects. */
 {
     TkCanvas *canvasPtr = (TkCanvas *) clientData;
-    unsigned int length;
-    int c, result;
+    int c, length, result;
     Tk_Item *itemPtr = NULL;		/* Initialization needed only to
 					 * prevent compiler warning. */
 #ifdef USE_OLD_TAG_SEARCH
@@ -933,12 +932,12 @@ CanvasWidgetCmd(clientData, interp, objc, objv)
 	    result = TCL_ERROR;
 	    goto done;
 	}
-	arg = Tcl_GetStringFromObj(objv[2], (int *) &length);
+	arg = Tcl_GetStringFromObj(objv[2], &length);
 	c = arg[0];
 	Tcl_MutexLock(&typeListMutex);
 	for (typePtr = typeList; typePtr != NULL; typePtr = typePtr->nextPtr) {
 	    if ((c == typePtr->name[0])
-		    && (strncmp(arg, typePtr->name, length) == 0)) {
+		    && (strncmp(arg, typePtr->name, (unsigned) length) == 0)) {
 		if (matchPtr != NULL) {
 		    Tcl_MutexUnlock(&typeListMutex);
 		  badType:
@@ -5571,7 +5570,7 @@ GetStringsFromObjs(argc, objv)
     }
     argv = (CONST char **) ckalloc((argc+1) * sizeof(char *));
     for (i = 0; i < argc; i++) {
-	argv[i]=Tcl_GetStringFromObj(objv[i], (int *) NULL);
+	argv[i] = Tcl_GetStringFromObj(objv[i], NULL);
     }
     argv[argc] = 0;
     return argv;
